--- a/src/components/steps/steps.css
+++ b/src/components/steps/steps.css
@@ -71,10 +71,14 @@
   .steps-holder > h1 {
     margin-top: 0px;
     word-spacing: 10px;
+    margin-left: 0px;
   }
   .full-steps-holder {
     height: fit-content;
     margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .guide-step {
     width: 100%;
@@ -83,6 +87,9 @@
     flex-direction: column;
     align-items: center;
     height: 600px;
+  }
+  .all-step {
+    width: 90%;
   }
   .steps > div {
     width: 90%;
